# ofapi

./: .gitignore  Cargo.toml  README.md  config.toml  statics.csv
src/: account.rs  auth.rs  cookie.rs  database.rs  email.rs  legacy.rs  lib.rs  main.rs  moderation.rs  monitor.rs  rankinfo.rs  statics.rs  tokens.rs  util.rs
src/database/: mod.rs  postgres_backend.rs  sqlite_backend.rs
templates/: email_verified.html  legacy_index.html  temp_password.html  temp_password.txt  verify_email.html  verify_email.txt
